# Project-Copperfin

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Project-Copperfin.sln  README.md  SECURITY.md  agent-handoff.md  agents.md  codex-resume-prompt.txt  issues.txt  remaining-work.md
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  data-corruption-report.yml  documentation-feedback.yml  feature-request.yml  general-feedback.yml  runtime-crash-report.yml  safety-critical-documentation-change.yml  safety-incident-feedback.yml  traceability-slice.yml
.github/agents/: copperfin-vfp-runtime.agent.md
.github/workflows/: build-installers.yml  build-vsix.yml  native-validation.yml  safety-traceability-gate.yml  security-supply-chain.yml  windows-deep-validation.yml
.history/: remaining-work_20260418154802.md  remaining-work_20260418155041.md  remaining-work_20260418180001.md
.history/docs/: 22-vfp-language-reference-coverage_20260418154824.md  22-vfp-language-reference-coverage_20260418155051.md  22-vfp-language-reference-coverage_20260418174234.md
.history/tests/: test_prg_engine_functions_20260418154628.cpp  test_prg_engine_functions_20260418154634.cpp  test_prg_engine_functions_20260418154720.cpp  test_prg_engine_functions_20260418154726.cpp  test_prg_engine_functions_20260418154745.cpp  test_prg_engine_functions_20260418155029.cpp  test_prg_engine_functions_20260418164526.cpp  test_prg_engine_functions_20260418170345.cpp  test_prg_engine_functions_20260418171419.cpp  test_prg_engine_functions_20260418171458.cpp  test_prg_engine_functions_20260418173451.cpp  test_prg_engine_functions_20260418173644.cpp  test_prg_engine_functions_20260418173712.cpp  test_prg_engine_functions_20260418174040.cpp
apps/copperfin_build_host/: main.cpp
apps/copperfin_inspect/: main.cpp
apps/copperfin_runtime_host/: main.cpp
apps/copperfin_studio_host/: main.cpp
docs/: 01-product-charter.md  02-architecture.md  03-compatibility-and-migration.md  04-security-model.md  05-roadmap.md  06-branding.md  07-clean-room-rules.md  08-reference-map.md  09-adr-cpp-first.md  10-dotnet-interop.md  11-engineering-spec-dotnet.md  12-vfp-asset-editing-and-execution.md  13-index-format-notes.md  14-hybrid-studio-and-visual-studio-host.md  15-local-product-archeology.md  16-vfp9-equivalent-subsystems.md  17-modern-designer-direction.md  18-native-security-and-rbac.md  19-polyglot-and-ai-subprojects.md  20-runtime-build-and-debug-pipeline.md  21-database-federation-and-query-translation.md  22-vfp-language-reference-coverage.md  23-phase-a-dependency-breakdown.md  23-vfp-help-and-component-mining.md  24-system-uml.md
docs/safety/: hazard-register.md  test-coverage-gap-analysis.md  triage-rubric.md
scripts/: drive-codex.ps1  export-vfp-chm-topic-index.ps1  export-vfp-compatibility-corpus.ps1  export-vfp-reference-index.ps1  split_prg_engine.py  validate-posix.sh  validate-safety-traceability.ps1  validate-windows.ps1
src/platform/: database_model.cpp  extensibility_model.cpp  federation_execution.cpp  query_translator.cpp
src/runtime/: .prg_engine.cpp.swp  prg_engine.cpp  prg_engine_aggregate.inl  prg_engine_arrays.inl  prg_engine_command_helpers.cpp  prg_engine_command_helpers.h  prg_engine_cursor.inl  prg_engine_date_time_functions.cpp  prg_engine_date_time_functions.h  prg_engine_dispatch.inl  prg_engine_dll.inl  prg_engine_expression.inl  prg_engine_file_io_functions.cpp  prg_engine_file_io_functions.h  prg_engine_flow.inl  prg_engine_free_functions.inl  prg_engine_helpers.cpp  prg_engine_helpers.h  prg_engine_internal.h  prg_engine_numeric_functions.cpp  prg_engine_numeric_functions.h  prg_engine_parser.cpp  prg_engine_path_functions.cpp  prg_engine_path_functions.h  prg_engine_records.inl  prg_engine_runtime_config.cpp  prg_engine_runtime_config.h  prg_engine_runtime_surface_functions.cpp  prg_engine_runtime_surface_functions.h  prg_engine_session.inl  prg_engine_sql.inl  prg_engine_static_analysis.cpp  prg_engine_string_functions.cpp  prg_engine_string_functions.h  prg_engine_table_structure_helpers.cpp  prg_engine_table_structure_helpers.h  prg_engine_type_functions.cpp  prg_engine_type_functions.h  prg_engine_variables.inl  runtime_pipeline.cpp  (+1 more)
src/security/: audit_stream.cpp  authorization.cpp  external_process_policy.cpp  process_hardening.cpp  secret_provider.cpp  security_model.cpp  sha256.cpp
src/studio/: document_model.cpp  product_subsystems.cpp  project_workspace.cpp  report_layout.cpp  vs_launch_contract.cpp
src/vfp/: asset_inspector.cpp  cdx_header.cpp  dbf_header.cpp  dbf_table.cpp  index_probe.cpp  visual_asset_editor.cpp
tests/: CMakeLists.txt  prg_engine_test_support.cpp  prg_engine_test_support.h  test_dbf_table.cpp  test_federation_execution.cpp  test_platform_models.cpp  test_prg_engine.cpp  test_prg_engine_aggregate_array_functions.cpp  test_prg_engine_arrays.cpp  test_prg_engine_control_flow.cpp  test_prg_engine_data_io.cpp  test_prg_engine_date_time_functions.cpp  test_prg_engine_file_io_functions.cpp  test_prg_engine_functions.cpp  test_prg_engine_path_functions.cpp  test_prg_engine_runtime_surface_functions.cpp  test_prg_engine_seek_index.cpp  test_prg_engine_sql_cursors.cpp  test_prg_engine_string_math_functions.cpp  test_prg_engine_table_mutation.cpp  test_prg_engine_table_structure.cpp  test_prg_engine_work_areas.cpp  test_product_subsystems.cpp  test_project_workspace.cpp  test_query_translator.cpp  test_report_layout.cpp  test_runtime_pipeline.cpp  test_security_controls.cpp  test_studio_host.cpp  test_vfp_assets.cpp  test_visual_asset_editor.cpp  test_xasset_methods.cpp
vsix/: README.md
vsix/Copperfin.DesignerSmokeTests/: Copperfin.DesignerSmokeTests.csproj  Program.cs
vsix/Copperfin.Studio/: Copperfin.Studio.csproj  Program.cs  StudioMainForm.cs
vsix/Copperfin.VisualStudio/: .vsix  Copperfin.VisualStudio.csproj  Copperfin.vsct  CopperfinAssetEditorControl.cs  CopperfinAssetEditorFactory.cs  CopperfinAssetEditorPane.cs  CopperfinDesignSurfaceControl.cs  CopperfinDesignerSelection.cs  CopperfinPackage.cs  (+22 more)
(+40 files in other folders)
